--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "swarm-agentes"
+name = "ai-agentes"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
@@ -8,6 +8,7 @@ dependencies = [
   "anthropic>=0.49.0",
   "openai>=1.72.0",
   "openai-agents>=0.0.9",
+  "pydantic>=2.11.3",
   "python-dotenv>=1.0.0",
   "requests>=2.31.0",
 ]
